--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
+    "mongoose-slug-generator": "^1.0.4",
+    "mongoose-url-slugs": "^0.1.7",
     "nodemon": "^2.0.20"
   }
 }
