--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.4.2",
-    "mongoose-slug-generator": "^1.0.4",
-    "mongoose-url-slugs": "^0.1.7",
-    "nodemon": "^2.0.20"
+    "mongoose-unique-validator": "^3.1.0",
+    "nodemon": "^2.0.20",
+    "slug": "^8.0.0"
   }
 }
